<resources>
    <string name="app_name">实验室管理系统</string>
    <string name="login_title">高校实验室管理系统</string>
    <string name="login_subtitle">Laboratory Information Management</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_logging_in">登录中...</string>
    <string name="error_empty_username">请输入用户名</string>
    <string name="error_empty_password">请输入密码</string>
    <string name="test_accounts">测试账号</string>
    <string name="server_config">服务器配置</string>
    <string name="save">保存</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="logout">退出登录</string>
</resources>